--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([37.75046254574097, -122.43403395556615], 11.0);
-      L.tileLayer('file:///C%3A/Users/hugob/OneDrive/Documents/GIS/Week%208/PT2/SF_Model_Tiles/{z}/{x}/{y}.png', {
+      L.tileLayer('https://raw.githubusercontent.com/hugobudd/SF_Model_Tiles/main/{z}/{x}/{y}.png', {
         minZoom: 7,
         maxZoom: 15,
         tms: false,
